# pythonImageDetector

./: README.md  alarm.ipynb  pyproject.toml  requirements.txt
