[project]
name = "alarm"
version = "0.1.0"
description = "A script that look your screen for something shows up and alert you"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.1",
    "colorama==0.4.6",
    "comm==0.2.3",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "executing==2.2.1",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.7.0",
    "jupyter-core==5.9.1",
    "matplotlib-inline==0.2.1",
    "mouseinfo==0.1.3",
    "nest-asyncio==1.6.0",
    "numpy==2.2.6",
    "opencv-python==4.12.0.88",
    "packaging==25.0",
    "parso==0.8.5",
    "pillow==10.0.0",
    "platformdirs==4.5.1",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.1",
    "pure-eval==0.2.3",
    "pyautogui==0.9.54",
    "pygame==2.5.2",
    "pygetwindow==0.0.9",
    "pygments==2.19.2",
    "pymsgbox==2.0.1",
    "pyperclip==1.11.0",
    "pyrect==0.2.0",
    "pyscreeze==1.0.1",
    "python-dateutil==2.9.0.post0",
    "pytweening==1.2.0",
    "pyzmq==27.1.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "wcwidth==0.2.14",
]
